<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/playdog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.146"
            android:id="@+id/playdog"
            android:textSize="60sp"/>
    <Button
            android:text="gowalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:id="@+id/gowalk"
            android:layout_marginTop="469dp"
            app:layout_constraintTop_toBottomOf="@+id/playdog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="38dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/friends" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:id="@+id/places"
            android:layout_marginTop="469dp"
            app:layout_constraintTop_toBottomOf="@+id/playdog"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="38dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:id="@+id/friends"
            android:layout_marginTop="469dp"
            app:layout_constraintTop_toBottomOf="@+id/playdog"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="38dp"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/places"/>
    <Button
            android:text="@string/selfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:id="@+id/selfie"
            android:layout_marginTop="468dp"
            app:layout_constraintTop_toBottomOf="@+id/playdog"
            app:layout_constraintEnd_toStartOf="@+id/places"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="39dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="317dp"
            android:layout_height="222dp"
            app:srcCompat="@drawable/images"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="178dp"
            app:layout_constraintBottom_toTopOf="@+id/gowalk"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="69dp"
            app:layout_constraintTop_toBottomOf="@+id/playdog"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/todo"
    />

</androidx.constraintlayout.widget.ConstraintLayout>